src2/objects/NES_EventLog__c.object
<CustomObject>
    <description>Stores all events and consumption retrieved from Telemetry enabled assets</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Duration__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Operational_Value__c, &apos;Halted&apos;), ISPICKVAL(Operational_Value__c, &apos;Down&apos;)), NOT(ISNULL( Reset_Timestamp__c ))),
			(Reset_Timestamp__c - NES_EventDate__c)*24*60,
			0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brew_Hour__c</fullName>
        <description>Field used for reporting on consumption per hour</description>
        <formula>VALUE( MID( TEXT( NES_EventDate__c + (User_Timezone__c)/24), 12, 2) )</formula>
        <label>Brew Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bucket_Field_Capsules__c</fullName>
        <description>Field to Bucket for Joined reports.</description>
        <formula>CASE( NES_CapsuleName__c ,
&quot;Espresso Decaffeinato&quot;, &quot;Decaffeinato&quot;,
&quot;Lungo Decaffeinato&quot;, &quot;Decaffeinato&quot;,
&quot;Espresso Leggero&quot;, &quot;Espresso&quot;,
&quot;Espresso Forte&quot;, &quot;Espresso&quot;,
&quot;Espresso Origin Brasil&quot;, &quot;Espresso&quot;,
&quot;Espresso Vanilla&quot;, &quot;Espresso&quot;,
&quot;Espresso Caramel&quot;, &quot;Espresso&quot;,
&quot;Lungo Leggero&quot;, &quot;Lungo&quot;,
&quot;Lungo Forte&quot;, &quot;Lungo&quot;,
&quot;Lungo Origin Guatemala&quot;, &quot;Lungo&quot;,
&quot;Ristretto&quot;, &quot;Ristretto&quot;,
&quot;Ristretto Intenso&quot;, &quot;Ristretto&quot;,
&quot;Ristretto Origin India&quot;, &quot;Ristretto&quot;,
					&quot;Exclusive Selection Nepal Lamjung&quot;, &quot;Exclusive Selection&quot;,
					&quot;Exclusive Selection Kilimanjaro Peaberry&quot;, &quot;Exclusive Selection&quot;,
&quot;Unrecognized&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bucket Field Caps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Link__c</fullName>
        <formula>HYPERLINK(&quot;/skyline/s/nes-eventlog/&quot; &amp; Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capsule_ID__c</fullName>
        <label>Capsule ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumption_Value__c</fullName>
        <formula>IF(ISNULL(NES_Count__c),0,NES_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumption Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractLineItemChassisMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Mirror Chassis</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemModuleMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module Mirror</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Event Logs (Module)</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Event Logs (Contract Line Item Module)</relationshipLabel>
        <relationshipName>Event_Logs_Module</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DailyAggregated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This event log has been count in a daily aggregate record</description>
        <inlineHelpText>This event log has been count in a daily aggregate record</inlineHelpText>
        <label>DailyAggregated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Time_local__c</fullName>
        <formula>TIMEVALUE(NES_EventDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Time local</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Extraction_Counter__c</fullName>
        <label>Extraction Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inconsistency__c</fullName>
        <formula>IF(Is_Current_Account__c = Is_Current_Account_Module__c , True , False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inconsistency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IoT_Asset_Serial_Number__c</fullName>
        <label>IoT Asset Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iot_Message_UUID__c</fullName>
        <description>ID in AWS of the message from machines</description>
        <label>Iot Message UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_Account_Module__c</fullName>
        <formula>Account_Id__r.Id = NES_Asset_Module__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Account Module</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_Account__c</fullName>
        <formula>Account_Id__r.Id  =   NES_Asset__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Account Chassis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Timestamp__c</fullName>
        <label>Message Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Module_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Logs (Module Account)</relationshipLabel>
        <relationshipName>Module_Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Asset_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Event Logs (Asset Module)</relationshipLabel>
        <relationshipName>Event_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Chassis</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Asset_Chasis_Event_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_BrewingStoppedByConsumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brewing Stopped by Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_CapsuleName__c</fullName>
        <label>Capsule Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CapsuleName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Count__c</fullName>
        <label>Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_End_Temperature__c</fullName>
        <description>Brewing event End Temperature</description>
        <label>End Temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_EventCode__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventDate__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_EventDescription__c</fullName>
        <label>Issue Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventName__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_EventNumber__c</fullName>
        <label>Issue Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventSummary__c</fullName>
        <label>Event Summary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventSummary</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_EventUrgency__c</fullName>
        <label>Event Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Event_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_HotWaterQuantity__c</fullName>
        <label>Brewing End Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_IoT_Market__c</fullName>
        <description>Iot Header Message Market Field</description>
        <label>IoT Market</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IoT_Message_Type__c</fullName>
        <description>IoT Message Block Type (CNS, EV, TLM ..)</description>
        <label>IoT Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IoT_Module_Serial_Number__c</fullName>
        <label>IoT Module Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IsSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_JsonMessage__c</fullName>
        <label>Json Message</label>
        <length>20480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_NotableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notable Event</label>
        <referenceTo>NES_NotableEvent__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_RecipeTypeRecipeID__c</fullName>
        <label>Recipe Type / Recipe ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Recipe__c</fullName>
        <label>Recipe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recipe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_StartTemperature__c</fullName>
        <inlineHelpText>Brewing event Start Temperature</inlineHelpText>
        <label>Start Temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_TopUpCoffeeVolume__c</fullName>
        <label>Top-up Coffee Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_TotalWaterQuantityThroughCapsule__c</fullName>
        <label>Brewing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Timestamp__c</fullName>
        <label>New Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Value__c</fullName>
        <label>Operational Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Halted</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Log</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reset_Event__c</fullName>
        <label>Reset Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Timestamp__c</fullName>
        <label>Reset Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Setting_Code__c</fullName>
        <description>Setting Code updated by machine on Configuration Change Events</description>
        <label>Setting Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setting_Name__c</fullName>
        <description>Setting updated by Machine on Configuration Change Event</description>
        <label>Setting Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCaps12months__c</fullName>
        <label>Total Caps 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMilk__c</fullName>
        <label>Total Milk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNespressoCaps12months__c</fullName>
        <label>Total Nespresso Caps 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantityOfWaterForBrews12Month__c</fullName>
        <label>Total Water Brews 12 months (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantityofWaterforBrews12months__c</fullName>
        <label>Total Water 12 months (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantityofWateronlyBrews__c</fullName>
        <label>Total Water Brews (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalWaterLitres__c</fullName>
        <label>Total Water (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnrecognizedCaps__c</fullName>
        <label>Unrecognized Caps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Timezone__c</fullName>
        <formula>((DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) +
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Timezone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>IoT_Asset_Serial_Number__c</columns>
        <columns>Iot_Message_UUID__c</columns>
        <columns>NES_Count__c</columns>
        <columns>NAME</columns>
        <columns>NES_CapsuleName__c</columns>
        <columns>NES_EventCode__c</columns>
        <columns>NES_EventDescription__c</columns>
        <columns>NES_EventName__c</columns>
        <columns>NES_IsSummary__c</columns>
        <columns>NES_Recipe__c</columns>
        <columns>NES_HotWaterQuantity__c</columns>
        <columns>UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UniqueKeyView</fullName>
        <columns>NAME</columns>
        <columns>UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>UniqueKeyView</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>myview</fullName>
        <columns>CREATED_DATE</columns>
        <columns>IoT_Asset_Serial_Number__c</columns>
        <columns>Iot_Message_UUID__c</columns>
        <columns>NES_Count__c</columns>
        <columns>NAME</columns>
        <columns>NES_CapsuleName__c</columns>
        <columns>NES_EventCode__c</columns>
        <columns>NES_EventDescription__c</columns>
        <columns>NES_EventName__c</columns>
        <columns>NES_IsSummary__c</columns>
        <columns>NES_Recipe__c</columns>
        <columns>NES_HotWaterQuantity__c</columns>
        <columns>UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IoT_Asset_Serial_Number__c</field>
            <operation>equals</operation>
            <value>TESTX231XXXXXX1NXXM</value>
        </filters>
        <label>my view</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>